# FilasMercado

./: CMakeLists.txt  README.md
include/: caixa.h  cliente.h  fila_prioridade.h  utils.h
src/: caixa.c  cliente.c  fila_prioridade.c  main.c  utils.c
